i18n: latest data from Transifex (except for uk, not sure if everything is okay there)

--- a/languagetool-language-modules/ast/src/main/resources/org/languagetool/MessagesBundle_ast.properties
+++ b/languagetool-language-modules/ast/src/main/resources/org/languagetool/MessagesBundle_ast.properties
@@ -73,6 +73,12 @@ desc_spelling_no_suggestions = Posible fallu d'ortograf\u00eda (ensin suxerencie
 
 desc_spelling_short = Fallu d'ortograf\u00eda
 
+# 3607406 +
+
+# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+
+# 3607406 -
+
 double_dots_short = Dos puntos sigu\u00edos
 
 double_commas_short = Dos comes sigu\u00edes
@@ -202,6 +208,16 @@ no_space_after = Nun pongas un espaciu depu\u00e9s d'abrir par\u00e9ntesis
 no_space_before = Nun pongas un espaciu enantes de zarrar par\u00e9ntesis
 
 no_space_before_dot = Nun pongas un espaciu enantes del puntu
+
+# 3607406 +
+
+# no_space_before_colon = Don't put a space before the colon
+
+# no_space_before_semicolon = Don't put a space before the semicolon
+
+# no_space_before_percentage = Don't put a space before the percentage
+
+# 3607406 -
 
 pl = Polacu
 
