--- a/languagetool-language-modules/br/src/main/resources/org/languagetool/MessagesBundle_br.properties
+++ b/languagetool-language-modules/br/src/main/resources/org/languagetool/MessagesBundle_br.properties
@@ -73,6 +73,12 @@ desc_spelling_no_suggestions = Fazi skriva\u00f1 posupl (kinnig ebet)
 
 desc_spelling_short = Fazi reizhskriva\u00f1
 
+# 3607406 +
+
+# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+
+# 3607406 -
+
 double_dots_short = Daou bik diouzh renk
 
 double_commas_short = Daou skej diouzh renk
@@ -202,6 +208,16 @@ no_space_after = Esaouenn ebet goude ur grommell digor
 no_space_before = Esaouenn ebet dirak ur grommell serr
 
 no_space_before_dot = Esaouenn ebet dirak ur pik
+
+# 3607406 +
+
+# no_space_before_colon = Don't put a space before the colon
+
+# no_space_before_semicolon = Don't put a space before the semicolon
+
+# no_space_before_percentage = Don't put a space before the percentage
+
+# 3607406 -
 
 pl = Poloneg
 
