--- a/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
+++ b/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
@@ -73,6 +73,12 @@ desc_spelling_no_suggestions = Possible error ortogr\u00e0fic (sense suggeriment
 
 desc_spelling_short = Error ortogr\u00e0fic
 
+# 3607406 +
+
+# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+
+# 3607406 -
+
 double_dots_short = Dos punts consecutius
 
 double_commas_short = Dues comes consecutives
@@ -203,11 +209,21 @@ no_space_before = No poseu cap espai despr\u00e9s dels par\u00e8ntesis de tancam
 
 no_space_before_dot = No deixeu cap espai abans del punt
 
+# 3607406 +
+
+# no_space_before_colon = Don't put a space before the colon
+
+# no_space_before_semicolon = Don't put a space before the semicolon
+
+# no_space_before_percentage = Don't put a space before the percentage
+
+# 3607406 -
+
 pl = polon\u00e8s
 
 repetition = Possible error tipogr\u00e0fic\: heu repetit una paraula
 
-result1 = <br>\n<b> {0}. L\u00ednia {1}, columna {2}</b><br>
+result1 = <br>\\n<b> {0}. L\u00ednia {1}, columna {2}</b><br>
 
 resultAreaText = Els resultats apareixeran ac\u00ed
 
