--- a/languagetool-language-modules/da/src/main/resources/org/languagetool/MessagesBundle_da.properties
+++ b/languagetool-language-modules/da/src/main/resources/org/languagetool/MessagesBundle_da.properties
@@ -73,6 +73,12 @@ desc_spelling_no_suggestions = Mulig stavefejl (uden forslag)
 
 desc_spelling_short = Stavefejl
 
+# 3607406 +
+
+# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+
+# 3607406 -
+
 double_dots_short = To p\u00e5 hinanden f\u00f8lgende punktummer
 
 double_commas_short = To p\u00e5 hinanden f\u00f8lgende kommaer
@@ -202,6 +208,16 @@ no_space_after = Inds\u00e6t ikke et mellemrum efter parentesbegynd
 no_space_before = Inds\u00e6t ikke et mellemrum f\u00f8r parentesslut
 
 no_space_before_dot = Inds\u00e6t ikke et mellemrum f\u00f8r punktum
+
+# 3607406 +
+
+no_space_before_colon = Inds\u00e6t ikke et mellemrum f\u00f8r kolon
+
+no_space_before_semicolon = Inds\u00e6t ikke et mellemrum f\u00f8r semikolon
+
+# no_space_before_percentage = Don't put a space before the percentage
+
+# 3607406 -
 
 pl = Polsk
 
