--- a/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
+++ b/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
@@ -73,6 +73,12 @@ desc_spelling_no_suggestions = M\u00f6gliche Tippfehler (ohne Korrekturvorschl\u
 
 desc_spelling_short = Rechtschreibfehler
 
+# 3607406 +
+
+# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+
+# 3607406 -
+
 double_dots_short = Zwei aufeinanderfolgende Punkte
 
 double_commas_short = Zwei aufeinanderfolgende Kommas
@@ -202,6 +208,16 @@ no_space_after = Hinter einer \u00f6ffnenden Klammer wird kein Leerzeichen einge
 no_space_before = Vor einer schlie\u00dfenden Klammer wird kein Leerzeichen eingef\u00fcgt.
 
 no_space_before_dot = Vor dem Punkt sollte kein Leerzeichen stehen
+
+# 3607406 +
+
+no_space_before_colon = Vor dem Doppelpunkt sollte kein Leerzeichen stehen
+
+no_space_before_semicolon = Vor dem Semikolon sollte kein Leerzeichen stehen
+
+# no_space_before_percentage = Don't put a space before the percentage
+
+# 3607406 -
 
 pl = Polnisch
 
