--- a/languagetool-language-modules/eo/src/main/resources/org/languagetool/MessagesBundle_eo.properties
+++ b/languagetool-language-modules/eo/src/main/resources/org/languagetool/MessagesBundle_eo.properties
@@ -73,6 +73,12 @@ desc_spelling_no_suggestions = Ebla misliterumo (sen sugesto)
 
 desc_spelling_short = Mistajpa\u0135o
 
+# 3607406 +
+
+desc_whitespace_before_punctuation = Uzo de spaceto anta\u016d dupunkto, punktokomo kaj procentosigno.
+
+# 3607406 -
+
 double_dots_short = Du sinsekvaj punktoj
 
 double_commas_short = Du sinsekvaj komoj
@@ -202,6 +208,16 @@ no_space_after = Ne metu spaceton malanta\u016d malfermantaj krampoj
 no_space_before = Ne metu spaceton anta\u016d fermanta krampo
 
 no_space_before_dot = Ne enmetu spaceton anta\u016d punkto
+
+# 3607406 +
+
+no_space_before_colon = Ne metu spaceton anta\u016d komo
+
+no_space_before_semicolon = Ne metu spaceton anta\u016d punktokomo
+
+no_space_before_percentage = Ne metu spaceton anta\u016d procentosigno
+
+# 3607406 -
 
 pl = Pola
 
