--- a/languagetool-language-modules/es/src/main/resources/org/languagetool/MessagesBundle_es.properties
+++ b/languagetool-language-modules/es/src/main/resources/org/languagetool/MessagesBundle_es.properties
@@ -73,6 +73,12 @@ desc_spelling_no_suggestions = Posible error de ortograf\u00eda (sin sugerencias
 
 desc_spelling_short = Error de ortograf\u00eda
 
+# 3607406 +
+
+# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+
+# 3607406 -
+
 double_dots_short = Dos puntos consecutivos
 
 double_commas_short = Dos comas consecutivas
@@ -202,6 +208,16 @@ no_space_after = No se deja un espacio despu\u00e9s de un par\u00e9ntesis izquie
 no_space_before = No se deja un espacio antes de un par\u00e9ntesis derecho
 
 no_space_before_dot = No se deja un espacio antes del punto
+
+# 3607406 +
+
+# no_space_before_colon = Don't put a space before the colon
+
+# no_space_before_semicolon = Don't put a space before the semicolon
+
+# no_space_before_percentage = Don't put a space before the percentage
+
+# 3607406 -
 
 pl = polaco
 
