--- a/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
+++ b/languagetool-language-modules/fr/src/main/resources/org/languagetool/MessagesBundle_fr.properties
@@ -73,6 +73,12 @@ desc_spelling_no_suggestions = Faute d'orthographe possible (sans suggestions)
 
 desc_spelling_short = Faute de frappe
 
+# 3607406 +
+
+# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+
+# 3607406 -
+
 double_dots_short = Deux points cons\u00e9cutifs
 
 double_commas_short = Deux virgules cons\u00e9cutives
@@ -202,6 +208,16 @@ no_space_after = Ne placez pas d'espace apr\u00e8s une parenth\u00e8se ouvrante
 no_space_before = Ne placez pas d'espace avant une parenth\u00e8se fermante
 
 no_space_before_dot = Ne placez pas d'espace avant le point
+
+# 3607406 +
+
+# no_space_before_colon = Don't put a space before the colon
+
+# no_space_before_semicolon = Don't put a space before the semicolon
+
+# no_space_before_percentage = Don't put a space before the percentage
+
+# 3607406 -
 
 pl = Polonais
 
