--- a/languagetool-language-modules/gl/src/main/resources/org/languagetool/MessagesBundle_gl.properties
+++ b/languagetool-language-modules/gl/src/main/resources/org/languagetool/MessagesBundle_gl.properties
@@ -73,6 +73,12 @@ desc_spelling_no_suggestions = Pos\u00edbel erro ortogr\u00e1fico (sen suxesti\u
 
 desc_spelling_short = Erro ortogr\u00e1fico
 
+# 3607406 +
+
+desc_whitespace_before_punctuation = Uso de espazos en branco diante de dous puntos, punto e coma ou porcentaxe.
+
+# 3607406 -
+
 double_dots_short = Dous puntos consecutivos
 
 double_commas_short = D\u00faas comas consecutivas
@@ -202,6 +208,16 @@ no_space_after = Non debe usar espazos detr\u00e1s dos par\u00e9nteses de apertu
 no_space_before = Non debe usar espazos antes dos par\u00e9nteses de peche
 
 no_space_before_dot = Non debe po\u00f1er espazos antes dun punto.
+
+# 3607406 +
+
+no_space_before_colon = Non debe po\u00f1er espazos antes de dous puntos
+
+no_space_before_semicolon = Non debe po\u00f1er espazos antes de punto e coma
+
+no_space_before_percentage = Non debe po\u00f1er espazos antes da porcentaxe
+
+# 3607406 -
 
 pl = Polaco
 
