--- a/languagetool-language-modules/is/src/main/resources/org/languagetool/MessagesBundle_is.properties
+++ b/languagetool-language-modules/is/src/main/resources/org/languagetool/MessagesBundle_is.properties
@@ -73,6 +73,12 @@ desc_whitespacerepetition = Tv\u00f6falt bil (galli \u00e1 uppsetningu)
 
 # desc_spelling_short = Spelling mistake
 
+# 3607406 +
+
+# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+
+# 3607406 -
+
 double_dots_short = Tveir punktar \u00ed r\u00f6\u00f0
 
 double_commas_short = Tv\u00e6r kommur \u00ed r\u00f6\u00f0
@@ -202,6 +208,16 @@ no_space_after = Ekki setja bil eftir a\u00f0 svigi er opna\u00f0ur
 no_space_before = Ekki setja bil \u00e1\u00f0ur en sviga er loka\u00f0
 
 no_space_before_dot = Ekki setja bil \u00e1 undan punkti
+
+# 3607406 +
+
+# no_space_before_colon = Don't put a space before the colon
+
+# no_space_before_semicolon = Don't put a space before the semicolon
+
+# no_space_before_percentage = Don't put a space before the percentage
+
+# 3607406 -
 
 pl = p\u00f3lska
 
