--- a/languagetool-language-modules/it/src/main/resources/org/languagetool/MessagesBundle_it.properties
+++ b/languagetool-language-modules/it/src/main/resources/org/languagetool/MessagesBundle_it.properties
@@ -75,7 +75,7 @@ desc_spelling_short = Errore di battitura
 
 # 3607406 +
 
-desc_whitespace_before_punctuation = Utilizzo dello spazio prima di : ; %
+desc_whitespace_before_punctuation = Utilizzo dello spazio prima di \: ; %
 
 # 3607406 -
 
@@ -279,9 +279,9 @@ ja = Giapponese
 
 language_not_supported = Errore\: Spiacente, LanguageTool non gestisce la lingua "{0}". 
 
-http_server_start_failed = Non \u00e8 stato possibile avviare il servizio HTTP per LanguageTool all'indirizzo "{0}", porta {1}.\u23ce La porta potrebbe essere gi\u00e0 allocato ad un'altra applicazione.
+http_server_start_failed = Non \u00e8 stato possibile avviare il servizio HTTP per LanguageTool all'indirizzo "{0}", porta {1}.\u23ce La porta potrebbe essere gi\u00e0 allocata a un'altra applicazione.
 
-https_server_start_failed = Non \u00e8 stato possibile avviare il servizio HTTPS per LanguageTool all'indirizzo "{0}", porta {1}.\u23ce La porta potrebbe essere gi\u00e0 allocato ad un'altra applicazione.
+https_server_start_failed = Non \u00e8 stato possibile avviare il servizio HTTPS per LanguageTool all'indirizzo "{0}", porta {1}.\u23ce La porta potrebbe essere gi\u00e0 allocata a un'altra applicazione.
 
 https_server_start_failed_unknown_reason = Non \u00e8 stato possibile avviare il servizio HTTPS per LanguageTool all'indirizzo "{0}", porta {1}.
 
