--- a/languagetool-language-modules/km/src/main/resources/org/languagetool/MessagesBundle_km.properties
+++ b/languagetool-language-modules/km/src/main/resources/org/languagetool/MessagesBundle_km.properties
@@ -73,6 +73,12 @@ desc_spelling_no_suggestions = \u1798\u17b6\u1793\u200b\u1780\u17c6\u17a0\u17bb\
 
 desc_spelling_short = \u1794\u17d2\u179a\u1780\u1794\u1798\u17b6\u1793\u1780\u17c6\u17a0\u17bb\u179f
 
+# 3607406 +
+
+# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+
+# 3607406 -
+
 double_dots_short = \u1794\u17b6\u1793\u200b\u1794\u17d2\u179a\u17be\u200b\u1785\u17c6\u178e\u17bb\u1785\u200b\u17ac\u200b\u179f\u1789\u17d2\u1789\u17b6\u200b\u1780\u17d2\u1794\u17c0\u179f\u200b\u1796\u17b8\u179a\u200b\u1787\u17b6\u1794\u17cb\u1782\u17d2\u1793\u17b6
 
 double_commas_short = \u179f\u1789\u17d2\u1789\u17b6\u1780\u17d2\u1794\u17c0\u179f\u178a\u17c2\u179b\u1793\u17c5\u1787\u17b6\u1794\u17cb\u1796\u17b8\u179a
@@ -202,6 +208,16 @@ no_space_after = \u1780\u17bb\u17c6\u178a\u17b6\u1780\u17cb\u1785\u1793\u17d2\u1
 no_space_before = \u1780\u17bb\u17c6\u178a\u17b6\u1780\u17cb\u1785\u1793\u17d2\u179b\u17c7\u1793\u17c5\u1796\u17b8\u1798\u17bb\u1781\u179a\u1784\u17d2\u179c\u1784\u17cb\u1780\u17d2\u179a\u1785\u1780\u1794\u17b7\u1791...
 
 no_space_before_dot = \u1780\u17bb\u17c6\u178a\u17b6\u1780\u17cb\u1785\u1793\u17d2\u179b\u17c4\u17c7\u1793\u17c5\u1798\u17bb\u1781\u179f\u1789\u17d2\u1789\u17b6\u1781\u178e\u17d2\u178c
+
+# 3607406 +
+
+# no_space_before_colon = Don't put a space before the colon
+
+# no_space_before_semicolon = Don't put a space before the semicolon
+
+# no_space_before_percentage = Don't put a space before the percentage
+
+# 3607406 -
 
 pl = \u1794\u17c9\u17bc\u17a1\u17bc\u1789
 
