--- a/languagetool-language-modules/lt/src/main/resources/org/languagetool/MessagesBundle_lt.properties
+++ b/languagetool-language-modules/lt/src/main/resources/org/languagetool/MessagesBundle_lt.properties
@@ -73,6 +73,12 @@ desc_uppercase_sentence = Tikrinti ar sakinys prasideda i\u0161 did\u017eiosios 
 
 # desc_spelling_short = Spelling mistake
 
+# 3607406 +
+
+# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+
+# 3607406 -
+
 # double_dots_short = Two consecutive dots
 
 # double_commas_short = Two consecutive comma
@@ -202,6 +208,16 @@ no_space_after = Nereikia d\u0117ti tarpo po atidaran\u010dio skliaustelio
 no_space_before = Nereikia d\u0117ti tarpo prie\u0161 u\u017edarant\u012f skliaustel\u012f
 
 # no_space_before_dot = Don't put a space before the full stop
+
+# 3607406 +
+
+# no_space_before_colon = Don't put a space before the colon
+
+# no_space_before_semicolon = Don't put a space before the semicolon
+
+# no_space_before_percentage = Don't put a space before the percentage
+
+# 3607406 -
 
 pl = lenk\u0173
 
