--- a/languagetool-language-modules/nl/src/main/resources/org/languagetool/MessagesBundle_nl.properties
+++ b/languagetool-language-modules/nl/src/main/resources/org/languagetool/MessagesBundle_nl.properties
@@ -73,6 +73,12 @@ desc_spelling_no_suggestions = Mogelijke spelfouten (zonder suggesties)
 
 desc_spelling_short = Spelling onjuist
 
+# 3607406 +
+
+# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+
+# 3607406 -
+
 double_dots_short = Te veel punten
 
 double_commas_short = Te veel komma's
@@ -202,6 +208,16 @@ no_space_after = Zet geen spatie na een haakje openen
 no_space_before = Zet geen spatie voor een haakje sluiten
 
 no_space_before_dot = Zet geen spatie voor een punt
+
+# 3607406 +
+
+# no_space_before_colon = Don't put a space before the colon
+
+# no_space_before_semicolon = Don't put a space before the semicolon
+
+# no_space_before_percentage = Don't put a space before the percentage
+
+# 3607406 -
 
 pl = Pools
 
