--- a/languagetool-language-modules/pl/src/main/resources/org/languagetool/MessagesBundle_pl.properties
+++ b/languagetool-language-modules/pl/src/main/resources/org/languagetool/MessagesBundle_pl.properties
@@ -73,6 +73,12 @@ desc_spelling_no_suggestions = Mo\u017cliwy b\u0142\u0105d pisowni (bez podpowie
 
 desc_spelling_short = B\u0142\u0119dna pisownia
 
+# 3607406 +
+
+# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+
+# 3607406 -
+
 double_dots_short = Dwie kropki
 
 double_commas_short = Dwa przecinki
@@ -203,6 +209,16 @@ no_space_before = Nie wstawiamy spacji przed nawiasem zamykaj\u0105cym
 
 no_space_before_dot = Nie wstawiamy spacji przed kropk\u0105
 
+# 3607406 +
+
+# no_space_before_colon = Don't put a space before the colon
+
+# no_space_before_semicolon = Don't put a space before the semicolon
+
+# no_space_before_percentage = Don't put a space before the percentage
+
+# 3607406 -
+
 pl = polski
 
 repetition = Prawdopodobna liter\u00f3wka\: powt\u00f3rzony wyraz
@@ -263,9 +279,9 @@ ja = japo\u0144ski
 
 language_not_supported = B\u0142\u0105d\: Niestety, j\u0119zyk dokumentu "{0}" nie jest obs\u0142ugiwany w programie LanguageTool.
 
-http_server_start_failed = Nie mo\u017cna uruchomi\u0107 serwera HTTP programu LanguageTool na serwerze "{0}" i porcie {1}.\n\nMo\u017cliwe, \u017ce ten port jest wykorzystywany przez inny proces.
+http_server_start_failed = Nie mo\u017cna uruchomi\u0107 serwera HTTP programu LanguageTool na serwerze "{0}" i porcie {1}.\\n\nMo\u017cliwe, \u017ce ten port jest wykorzystywany przez inny proces.
 
-https_server_start_failed = Nie mo\u017cna uruchomi\u0107 serwera HTTPS programu LanguageTool na serwerze "{0}" i porcie {1}.\n\nMo\u017cliwe, \u017ce ten port jest wykorzystywany przez inny proces.
+https_server_start_failed = Nie mo\u017cna uruchomi\u0107 serwera HTTPS programu LanguageTool na serwerze "{0}" i porcie {1}.\\n\nMo\u017cliwe, \u017ce ten port jest wykorzystywany przez inny proces.
 
 https_server_start_failed_unknown_reason = Nie mo\u017cna uruchomi\u0107 serwera HTTP programu LanguageTool na serwerze "{0}" i porcie {1}.
 
