--- a/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_PT.properties
+++ b/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_PT.properties
@@ -73,6 +73,12 @@ desc_spelling_no_suggestions = Poss\u00edvel erro ortogr\u00e1fico (sem sugest\u
 
 desc_spelling_short = Erro ortogr\u00e1fico
 
+# 3607406 +
+
+# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+
+# 3607406 -
+
 double_dots_short = Dois pontos consecutivos
 
 double_commas_short = Duas v\u00edrgulas consecutivas
@@ -202,6 +208,16 @@ no_space_after = N\u00e3o coloques um espa\u00e7o ap\u00f3s o par\u00eantese de 
 no_space_before = N\u00e3o coloques um espa\u00e7o antes do par\u00eantese de fecho
 
 no_space_before_dot = N\u00e3o coloques um espa\u00e7o antes do ponto final
+
+# 3607406 +
+
+# no_space_before_colon = Don't put a space before the colon
+
+# no_space_before_semicolon = Don't put a space before the semicolon
+
+# no_space_before_percentage = Don't put a space before the percentage
+
+# 3607406 -
 
 pl = Polaco
 
