--- a/languagetool-language-modules/sk/src/main/resources/org/languagetool/MessagesBundle_sk.properties
+++ b/languagetool-language-modules/sk/src/main/resources/org/languagetool/MessagesBundle_sk.properties
@@ -73,6 +73,12 @@ desc_spelling_no_suggestions = Mo\u017en\u00e9 preklady (bez n\u00e1vrhov)
 
 desc_spelling_short = Preklep
 
+# 3607406 +
+
+# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+
+# 3607406 -
+
 double_dots_short = Dve za sebou id\u00face bodky
 
 double_commas_short = Dve za sebou id\u00face \u010diarky
@@ -202,6 +208,16 @@ no_space_after = Nevlo\u017ei\u0165 medzeru pred otv\u00e1raciu z\u00e1tvorku
 no_space_before = Nevlo\u017ei\u0165 medzeru za otv\u00e1raciu z\u00e1tvorku
 
 no_space_before_dot = Nevlo\u017ei\u0165 medzeru pred bodku
+
+# 3607406 +
+
+# no_space_before_colon = Don't put a space before the colon
+
+# no_space_before_semicolon = Don't put a space before the semicolon
+
+# no_space_before_percentage = Don't put a space before the percentage
+
+# 3607406 -
 
 pl = Po\u013esky
 
