--- a/languagetool-language-modules/sl/src/main/resources/org/languagetool/MessagesBundle_sl.properties
+++ b/languagetool-language-modules/sl/src/main/resources/org/languagetool/MessagesBundle_sl.properties
@@ -73,6 +73,12 @@ desc_spelling_no_suggestions = Morebitna \u010drkovalna napaka (brez predlogov)
 
 desc_spelling_short = Napaka pri \u010drkovanju
 
+# 3607406 +
+
+desc_whitespace_before_punctuation = Uporaba presledka pred dvopi\u010djem, podpi\u010djem in odstotkom.
+
+# 3607406 -
+
 double_dots_short = Zaporedni piki
 
 double_commas_short = Zaporedni vejici
@@ -125,7 +131,7 @@ guiCloseButton=Zapri
 
 guiConfigWindowTitle = Mo\u017enosti LanguageTool
 
-guiDemoText = To je primer vnosa za potrebe prikaza delovanja orodja LanguageTool. Upo\u0161tevajte, da ne vklju\u010duje preverjanja \u010drkovanja.
+guiDemoText = To je primer vnosa za potrebe prikaza delovanja orodja LanguageTool.
 guiLanguageManagerDialog=Upravitelj jezikovnih modulov
 
 guiMatchCount = Mo\u017ene napake\:
@@ -202,6 +208,16 @@ no_space_after = Ne postavljaj presledka za oklepaj
 no_space_before = Ne postavljaj presledka pred zaklepaj
 
 no_space_before_dot = Ne postavljaj presledka po piki
+
+# 3607406 +
+
+no_space_before_colon = Ne postavljaj presledka po dvopi\u010dju
+
+no_space_before_semicolon = Ne postavljaj presledka po podpi\u010dju
+
+no_space_before_percentage = Ne postavljaj presledka po odstotku
+
+# 3607406 -
 
 pl = poljski
 
