--- a/languagetool-language-modules/sv/src/main/resources/org/languagetool/MessagesBundle_sv.properties
+++ b/languagetool-language-modules/sv/src/main/resources/org/languagetool/MessagesBundle_sv.properties
@@ -73,6 +73,12 @@ desc_whitespacerepetition = Upprepade mellanslag (d\u00e5lig formateringsvana)
 
 # desc_spelling_short = Spelling mistake
 
+# 3607406 +
+
+# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+
+# 3607406 -
+
 double_dots_short = Tv\u00e5 punkter i f\u00f6ljd
 
 double_commas_short = Tv\u00e5 kommatecken i f\u00f6ljd
@@ -202,6 +208,16 @@ no_space_after = Ta bort blanksteg efter \u00f6ppnande parentesen
 no_space_before = Ta bort blanksteg f\u00f6re avslutande parentesen
 
 no_space_before_dot = Tryck inte p\u00e5 blanksteg vid slutet
+
+# 3607406 +
+
+# no_space_before_colon = Don't put a space before the colon
+
+# no_space_before_semicolon = Don't put a space before the semicolon
+
+# no_space_before_percentage = Don't put a space before the percentage
+
+# 3607406 -
 
 pl = Polska
 
