--- a/languagetool-language-modules/el/src/main/resources/org/languagetool/MessagesBundle_el_GR.properties
+++ b/languagetool-language-modules/el/src/main/resources/org/languagetool/MessagesBundle_el_GR.properties
@@ -73,6 +73,12 @@ desc_spelling_no_suggestions = \u03c0\u03b9\u03b8\u03b1\u03bd\u03cc \u03bf\u03c1
 
 desc_spelling_short = \u039f\u03c1\u03b8\u03bf\u03b3\u03c1\u03b1\u03c6\u03b9\u03ba\u03cc \u03bb\u03ac\u03b8\u03bf\u03c2
 
+# 3607406 +
+
+# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+
+# 3607406 -
+
 double_dots_short = \u0394\u03cd\u03bf \u03c3\u03c5\u03bd\u03b5\u03c7\u03cc\u03bc\u03b5\u03bd\u03b5\u03c2 \u03c4\u03b5\u03bb\u03b5\u03af\u03b5\u03c2
 
 double_commas_short = \u0394\u03cd\u03bf \u03c3\u03c5\u03bd\u03b5\u03c7\u03cc\u03bc\u03b5\u03bd\u03b1 \u03ba\u03cc\u03bc\u03bc\u03b1\u03c4\u03b1
@@ -202,6 +208,16 @@ no_space_after = \u039c\u03b7\u03bd \u03b2\u03ac\u03bb\u03b5\u03c4\u03b5 \u03ba\
 no_space_before = \u039c\u03b7\u03bd \u03b2\u03ac\u03bb\u03b5\u03c4\u03b5 \u03ba\u03b5\u03bd\u03cc \u03c0\u03c1\u03b9\u03bd \u03c4\u03bf \u03ba\u03bb\u03b5\u03af\u03c3\u03b9\u03bc\u03bf \u03c0\u03b1\u03c1\u03ad\u03bd\u03b8\u03b5\u03c3\u03b7\u03c2
 
 no_space_before_dot = \u039c\u03b7\u03bd \u03b2\u03ac\u03bb\u03b5\u03c4\u03b5 \u03ba\u03b5\u03bd\u03cc \u03c0\u03c1\u03b9\u03bd \u03b1\u03c0\u03cc \u03c4\u03b5\u03bb\u03b5\u03af\u03b1
+
+# 3607406 +
+
+# no_space_before_colon = Don't put a space before the colon
+
+# no_space_before_semicolon = Don't put a space before the semicolon
+
+# no_space_before_percentage = Don't put a space before the percentage
+
+# 3607406 -
 
 pl = \u03a0\u03bf\u03bb\u03c9\u03bd\u03b9\u03ba\u03ac
 
