--- a/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_BR.properties
+++ b/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_BR.properties
@@ -73,6 +73,12 @@ desc_spelling_no_suggestions = Poss\u00edvel erro ortogr\u00e1fico (sem sugest\u
 
 desc_spelling_short = Erro ortogr\u00e1fico
 
+# 3607406 +
+
+desc_whitespace_before_punctuation = Uso de espa\u00e7o em branco antes de v\u00edrgula, ponto e v\u00edrgula e porcentagem
+
+# 3607406 -
+
 double_dots_short = Dois pontos consecutivos
 
 double_commas_short = Duas v\u00edrgulas consecutivas
@@ -202,6 +208,16 @@ no_space_after = N\u00e3o insira um espa\u00e7o depois de abrir par\u00eanteses
 no_space_before = N\u00e3o insira um espa\u00e7o antes de fechar par\u00eanteses
 
 no_space_before_dot = N\u00e3o insira um espa\u00e7o antes do ponto final.
+
+# 3607406 +
+
+no_space_before_colon = N\u00e3o insira um espa\u00e7o antes de v\u00edrgula
+
+no_space_before_semicolon = N\u00e3o insira um espa\u00e7o antes de ponto e v\u00edrgula
+
+no_space_before_percentage = N\u00e3o insira um espa\u00e7o antes de porcentagem
+
+# 3607406 -
 
 pl = Polon\u00eas
 
