--- a/languagetool-language-modules/ro/src/main/resources/org/languagetool/MessagesBundle_ro.properties
+++ b/languagetool-language-modules/ro/src/main/resources/org/languagetool/MessagesBundle_ro.properties
@@ -73,6 +73,12 @@ desc_spelling_no_suggestions = Posibil\u0103 gre\u0219eal\u0103 de ortografie (n
 
 desc_spelling_short = Gre\u0219eal\u0103 de ortografie
 
+# 3607406 +
+
+# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+
+# 3607406 -
+
 double_dots_short = Dou\u0103 puncte consecutive
 
 double_commas_short = Dou\u0103 virgule consecutive
@@ -202,6 +208,16 @@ no_space_after = Nu pune\u021bi spa\u021biu dup\u0103 deschiderea parantezei
 no_space_before = Nu pune\u021bi spa\u021biu dup\u0103 \u00eenchiderea parantezei
 
 no_space_before_dot = Nu pune\u021bi spa\u021biu \u00eenainte de punct
+
+# 3607406 +
+
+# no_space_before_colon = Don't put a space before the colon
+
+# no_space_before_semicolon = Don't put a space before the semicolon
+
+# no_space_before_percentage = Don't put a space before the percentage
+
+# 3607406 -
 
 pl = Polonez\u0103
 
