--- a/languagetool-language-modules/zh/src/main/resources/org/languagetool/MessagesBundle_zh.properties
+++ b/languagetool-language-modules/zh/src/main/resources/org/languagetool/MessagesBundle_zh.properties
@@ -1,5 +1,5 @@
-# English translation of LanguageTool
-# Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
+# DO NOT MODIFY MANUALLY - all changes are done at https://www.transifex.com/projects/p/languagetool/
+# Copyright (C) 2006-2013 the LanguageTool team (http://www.languagetool.org)
 
 atd = \u81ea\u52a8\u68c0\u6d4b\u8bed\u8a00
 
@@ -72,6 +72,12 @@ desc_spelling = \u53ef\u80fd\u7684\u62fc\u5199\u9519\u8bef
 desc_spelling_no_suggestions = \u53ef\u80fd\u7684\u62fc\u5199\u9519\u8bef(\u6ca1\u6709\u4fee\u6539\u5efa\u8bae)
 
 desc_spelling_short = \u62fc\u5199\u9519\u8bef
+
+# 3607406 +
+
+# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+
+# 3607406 -
 
 double_dots_short = \u4e24\u4e2a\u8fde\u7eed\u7684\u53e5\u53f7
 
@@ -202,6 +208,16 @@ no_space_after = \u8bf7\u4e0d\u8981\u5728\u5de6\u62ec\u53f7\u540e\u7559\u7a7a\u6
 no_space_before = \u8bf7\u4e0d\u8981\u5728\u53f3\u62ec\u53f7\u524d\u7559\u7a7a\u683c
 
 no_space_before_dot = \u8bf7\u4e0d\u8981\u5728\u53e5\u53f7\u4e4b\u524d\u7559\u7a7a\u683c
+
+# 3607406 +
+
+# no_space_before_colon = Don't put a space before the colon
+
+# no_space_before_semicolon = Don't put a space before the semicolon
+
+# no_space_before_percentage = Don't put a space before the percentage
+
+# 3607406 -
 
 pl = \u6ce2\u5170\u8bed
 
