[km] added some rules by Nathan Wells

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -9,7 +9,7 @@ LanguageTool Change Log
   -rules have been categorized according to the upcoming Internationalization Tag Set (ITS)
    Version 2.0 standard from W3C.
 
- -Dutch
+ -Dutch:
   -updated rules to fix false alarms, thanks to Ruud Baars
 
  -French:
@@ -18,6 +18,9 @@ LanguageTool Change Log
  -Greek:
   -added a few rules (by Panagiotis Minos)
 
+ -Khmer:
+  -added some rules (by Nathan Wells)
+
  -Russian:
   -added some new rules (thanks for this rules to Julia Semenenko)
   -fixed some false alarms
@@ -25,7 +28,7 @@ LanguageTool Change Log
   -added false-friend rule
   -added bitext rule
 
- -Ukrainian
+ -Ukrainian:
   -new POS dictionary
   -new synthesizer dictionary
   -new spelling dictionary
