tiny typo/indentation fixes

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -22,7 +22,7 @@ LanguageTool Change Log
   -added some rules (by Nathan Wells)
 
  -Russian:
-  -added some new rules (thanks for this rules to Julia Semenenko)
+  -added some new rules (thanks for these rules to Julia Semenenko)
   -fixed some false alarms
   -added new segmentation rules
   -added false-friend rule
@@ -41,10 +41,11 @@ LanguageTool Change Log
 
  -HTTP server:
   -enabling and disabling rules at the same time (keeping the rest of the default options) is now allowed. 
-  To disable all the rules except those explicitly enabled, you can use the parameter enabledOnly=yes. Ex.: 
-  http://localhost:8081/?language=en&enabled=STRANGE_RULE,ANOTHER_RULE&enabledOnly=yes&text=my+text
+   To disable all the rules except those explicitly enabled, you can use the parameter enabledOnly=yes. Ex.:
+   http://localhost:8081/?language=en&enabled=STRANGE_RULE,ANOTHER_RULE&enabledOnly=yes&text=my+text
  
- -Fix bug "java.lang.StringIndexOutOfBoundsException" in DifferentLengthRule (Ex.:http://localhost:8081/?language=ru&text=№&srctext=No.&motherTongue=en )
+ -Fix bug "java.lang.StringIndexOutOfBoundsException" in DifferentLengthRule
+  (Ex.:http://localhost:8081/?language=ru&text=№&srctext=No.&motherTongue=en )
 
  -Updated Tika (used for language detection) from 0.9 to 1.3
 
