[nl] switch back to Hunspell (without suggestions) to avoid many false alarms

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -14,6 +14,11 @@ LanguageTool Change Log
 
  -Dutch:
   -updated rules to fix false alarms, thanks to Ruud Baars
+  -The Dutch spell checking has been switched back to Hunspell for now to avoid too
+   many false alarms because of unknown compounds. Unfortunately, Dutch spell
+   checking does not provide suggestions anymore, for performance reasons.
+   The dictionary used is the one at
+   http://www.opentaal.org/bestanden/doc_download/20-woordenlijst-v-210g-voor-openofficeorg-3
 
  -French:
   -added/improved several rules
