[PT] wrote that I added/improved several rules and that it now has around 2000 compound words.

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -31,6 +31,10 @@ LanguageTool Change Log
  -Khmer:
   -added some rules (by Nathan Wells)
 
+ -Portuguese:
+  -added/improved several rules
+  -it now has around 2000 compound words taken from a huge Porto Editora dictionary
+
  -Russian:
   -added some new rules (thanks for these rules to Julia Semenenko)
   -fixed some false alarms
