[eo] updated CHANGES.txt to indicate update of <url>...</url>.

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -20,6 +20,9 @@ LanguageTool Change Log
    The dictionary used is the one at
    http://www.opentaal.org/bestanden/doc_download/20-woordenlijst-v-210g-voor-openofficeorg-3
 
+ -Esperanto
+  -updated <url> links to PMEG.
+
  -French:
   -added/improved several rules
   -fixed some false alarms
