[br] indicate update of dictionary in CHANGES.txt

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -5,6 +5,7 @@ LanguageTool Change Log
  -Breton:
   -added/improved several rules
   -fixed some false alarms
+  -updated POS dictionary from Apertium (svn r45122)
 
  -Catalan:
   -improved rules
