[eo] updated CHANGES.txt for Esperanto.

--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -22,6 +22,8 @@ LanguageTool Change Log
    http://www.opentaal.org/bestanden/doc_download/20-woordenlijst-v-210g-voor-openofficeorg-3
 
  -Esperanto
+  -added/improved several rules
+  -fixed some false alarms
   -updated <url> links to PMEG.
 
  -French:
