latest i18n update from Transifex

--- a/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
+++ b/languagetool-language-modules/ca/src/main/resources/org/languagetool/MessagesBundle_ca.properties
@@ -23,7 +23,7 @@ category_typo = Possible error tipogr\u00e0fic
 
 checkDone = S'ha fet la comprovaci\u00f3, i s'han trobat {0} possibles problemes
 
-checkText = &Comprova el text
+checkText = &Revisa el text
 
 correctionMessage = Correcci\u00f3\:
 
@@ -75,7 +75,7 @@ desc_spelling_short = Error ortogr\u00e0fic
 
 # 3607406 +
 
-# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+desc_whitespace_before_punctuation = Poseu un espai abans de dos punts, punt i coma i el signe de percentatge.
 
 # 3607406 -
 
@@ -211,11 +211,11 @@ no_space_before_dot = No deixeu cap espai abans del punt
 
 # 3607406 +
 
-# no_space_before_colon = Don't put a space before the colon
+no_space_before_colon = No deixeu un espai abans dels dos punts
 
-# no_space_before_semicolon = Don't put a space before the semicolon
+no_space_before_semicolon = No deixeu un espai abans del punt i coma
 
-# no_space_before_percentage = Don't put a space before the percentage
+no_space_before_percentage = No deixeu un espai abans del percentatge
 
 # 3607406 -
 
@@ -281,9 +281,9 @@ language_not_supported = Error\: Disculpeu, la llengua "{0}" del document no fun
 
 http_server_start_failed = El servidor HTTP de LanguageTool no s'ha pogut iniciar en l'amfitri\u00f3 "{0}", port {1}.\u23ce Potser ja s'est\u00e0 executant una altra cosa en aquest port.
 
-https_server_start_failed = El servidor HTTP de LanguageTool no s'ha pogut iniciar en l'amfitri\u00f3 "{0}", port {1}.\u23ce Potser ja s'est\u00e0 executant una altra cosa en aquest port.
+https_server_start_failed = El servidor HTTPS de LanguageTool no s'ha pogut iniciar en l'amfitri\u00f3 "{0}", port {1}.\u23ce Potser ja s'est\u00e0 executant una altra cosa en aquest port.
 
-https_server_start_failed_unknown_reason = El servidor HTTP de LanguageTool no s'ha pogut iniciar en l'amfitri\u00f3 "{0}", port {1}
+https_server_start_failed_unknown_reason = El servidor HTTPS de LanguageTool no s'ha pogut iniciar en l'amfitri\u00f3 "{0}", port {1}
 
 tray_menu_enable_server = Executa el servidor HTTP
 
