--- a/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
+++ b/languagetool-language-modules/de/src/main/resources/org/languagetool/MessagesBundle_de.properties
@@ -75,7 +75,7 @@ desc_spelling_short = Rechtschreibfehler
 
 # 3607406 +
 
-# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+desc_whitespace_before_punctuation = Leerzeichen vor Doppelpunkt, Semikolon oder Prozentzeichen.
 
 # 3607406 -
 
@@ -215,7 +215,7 @@ no_space_before_colon = Vor dem Doppelpunkt sollte kein Leerzeichen stehen
 
 no_space_before_semicolon = Vor dem Semikolon sollte kein Leerzeichen stehen
 
-# no_space_before_percentage = Don't put a space before the percentage
+no_space_before_percentage = Vor dem Prozentzeichen sollte kein Leerzeichen stehen
 
 # 3607406 -
 
