--- a/languagetool-language-modules/tl/src/main/resources/org/languagetool/MessagesBundle_tl.properties
+++ b/languagetool-language-modules/tl/src/main/resources/org/languagetool/MessagesBundle_tl.properties
@@ -75,7 +75,7 @@ desc_spelling_short = Spelling mistake
 
 # 3607406 +
 
-# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
 
 # 3607406 -
 
@@ -211,11 +211,11 @@ no_space_before_dot = Don't put a space before the full stop
 
 # 3607406 +
 
-# no_space_before_colon = Don't put a space before the colon
+no_space_before_colon = Don't put a space before the colon
 
-# no_space_before_semicolon = Don't put a space before the semicolon
+no_space_before_semicolon = Don't put a space before the semicolon
 
-# no_space_before_percentage = Don't put a space before the percentage
+no_space_before_percentage = Don't put a space before the percentage
 
 # 3607406 -
 
