--- a/languagetool-language-modules/zh/src/main/resources/org/languagetool/MessagesBundle_zh.properties
+++ b/languagetool-language-modules/zh/src/main/resources/org/languagetool/MessagesBundle_zh.properties
@@ -75,7 +75,7 @@ desc_spelling_short = \u62fc\u5199\u9519\u8bef
 
 # 3607406 +
 
-# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+desc_whitespace_before_punctuation = \u5728\u9017\u53f7\u3001\u5206\u53f7\u548c\u767e\u5206\u53f7\u524d\u4f7f\u7528\u7a7a\u683c\u3002
 
 # 3607406 -
 
@@ -211,11 +211,11 @@ no_space_before_dot = \u8bf7\u4e0d\u8981\u5728\u53e5\u53f7\u4e4b\u524d\u7559\u7a
 
 # 3607406 +
 
-# no_space_before_colon = Don't put a space before the colon
+no_space_before_colon = \u4e0d\u8981\u5728\u9017\u53f7\u524d\u653e\u7f6e\u4e00\u4e2a\u7a7a\u683c
 
-# no_space_before_semicolon = Don't put a space before the semicolon
+no_space_before_semicolon = \u4e0d\u8981\u5728\u5206\u53f7\u524d\u4f7f\u7528\u4e00\u4e2a\u7a7a\u683c
 
-# no_space_before_percentage = Don't put a space before the percentage
+no_space_before_percentage = \u4e0d\u8981\u5728\u767e\u5206\u53f7\u4e4b\u524d\u4f7f\u7528\u4e00\u4e2a\u7a7a\u683c
 
 # 3607406 -
 
