--- a/languagetool-language-modules/el/src/main/resources/org/languagetool/MessagesBundle_el_GR.properties
+++ b/languagetool-language-modules/el/src/main/resources/org/languagetool/MessagesBundle_el_GR.properties
@@ -75,7 +75,7 @@ desc_spelling_short = \u039f\u03c1\u03b8\u03bf\u03b3\u03c1\u03b1\u03c6\u03b9\u03
 
 # 3607406 +
 
-# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+desc_whitespace_before_punctuation = \u0395\u03b9\u03c3\u03b1\u03b3\u03c9\u03b3\u03ae \u03ba\u03b5\u03bd\u03bf\u03cd \u03c0\u03c1\u03b9\u03bd \u03b1\u03c0\u03cc \u03c4\u03b1 \u03c3\u03cd\u03bc\u03b2\u03bf\u03bb\u03b1 \u03ac\u03bd\u03c9 \u03ba\u03ac\u03c4\u03c9 \u03c4\u03b5\u03bb\u03b5\u03af\u03b1 (\:), \u03b5\u03c1\u03c9\u03c4\u03b7\u03bc\u03b1\u03c4\u03b9\u03ba\u03cc (;) \u03ba\u03b1\u03b9 \u03b5\u03c0\u03af \u03c4\u03bf\u03b9\u03c2 \u03b5\u03ba\u03b1\u03c4\u03cc (%)
 
 # 3607406 -
 
@@ -211,11 +211,11 @@ no_space_before_dot = \u039c\u03b7\u03bd \u03b2\u03ac\u03bb\u03b5\u03c4\u03b5 \u
 
 # 3607406 +
 
-# no_space_before_colon = Don't put a space before the colon
+no_space_before_colon = \u039c\u03b7\u03bd \u03b5\u03b9\u03c3\u03ac\u03b3\u03b5\u03b9\u03c2 \u03ba\u03b5\u03bd\u03cc \u03c0\u03c1\u03b9\u03bd \u03b1\u03c0\u03cc \u03c4\u03bf \u03c3\u03cd\u03bc\u03b2\u03bf\u03bb\u03bf \u03ac\u03bd\u03c9 \u03ba\u03ac\u03c4\u03c9 \u03c4\u03b5\u03bb\u03b5\u03af\u03b1
 
-# no_space_before_semicolon = Don't put a space before the semicolon
+no_space_before_semicolon = \u039c\u03b7\u03bd \u03b5\u03b9\u03c3\u03ac\u03b3\u03b5\u03b9\u03c2 \u03ba\u03b5\u03bd\u03cc \u03c0\u03c1\u03b9\u03bd \u03b1\u03c0\u03cc \u03b5\u03c1\u03c9\u03c4\u03b7\u03bc\u03b1\u03c4\u03b9\u03ba\u03cc
 
-# no_space_before_percentage = Don't put a space before the percentage
+no_space_before_percentage = \u039c\u03b7\u03bd \u03b5\u03b9\u03c3\u03ac\u03b3\u03b5\u03b9\u03c2 \u03ba\u03b5\u03bd\u03cc \u03c0\u03c1\u03b9\u03bd \u03b1\u03c0\u03cc \u03c4\u03bf \u03c3\u03cd\u03bc\u03b2\u03bf\u03bb\u03bf \u03b5\u03c0\u03af \u03c4\u03bf\u03b9\u03c2 \u03b5\u03ba\u03b1\u03c4\u03cc
 
 # 3607406 -
 
