--- a/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_PT.properties
+++ b/languagetool-language-modules/pt/src/main/resources/org/languagetool/MessagesBundle_pt_PT.properties
@@ -75,7 +75,7 @@ desc_spelling_short = Erro ortogr\u00e1fico
 
 # 3607406 +
 
-# desc_whitespace_before_punctuation = Use of whitespace before colon, semicolon and percentage.
+desc_whitespace_before_punctuation = Uso de espa\u00e7o em branco antes da v\u00edrgula, ponto e v\u00edrgula e percentagem.
 
 # 3607406 -
 
@@ -211,11 +211,11 @@ no_space_before_dot = N\u00e3o coloques um espa\u00e7o antes do ponto final
 
 # 3607406 +
 
-# no_space_before_colon = Don't put a space before the colon
+no_space_before_colon = N\u00e3o coloques um espa\u00e7o antes da v\u00edrgula
 
-# no_space_before_semicolon = Don't put a space before the semicolon
+no_space_before_semicolon = N\u00e3o coloques um espa\u00e7o antes do ponto e v\u00edrgula
 
-# no_space_before_percentage = Don't put a space before the percentage
+no_space_before_percentage = N\u00e3o coloques um espa\u00e7o antes da percentagem
 
 # 3607406 -
 
