--- a/languagetool-language-modules/ru/src/main/resources/org/languagetool/MessagesBundle_ru.properties
+++ b/languagetool-language-modules/ru/src/main/resources/org/languagetool/MessagesBundle_ru.properties
@@ -156,7 +156,7 @@ guiMenuQuit = &\u0412\u044b\u0445\u043e\u0434
 
 guiMenuShowMainWindow = \u041e\u0442\u043a\u0440\u044b\u0442\u044c \u0433\u043b\u0430\u0432\u043d\u043e\u0435 \u043e\u043a\u043d\u043e
 
-guiMotherTongue = \u042f\u0437\u044b\u043a\:
+guiMotherTongue = \u0420\u043e\u0434\u043d\u043e\u0439 \u044f\u0437\u044b\u043a\:
 
 guiNoErrorsFound = \u041e\u0448\u0438\u0431\u043e\u043a \u0438 \u043f\u0440\u0435\u0434\u0443\u043f\u0440\u0435\u0436\u0434\u0435\u043d\u0438\u0439 \u043d\u0435 \u043d\u0430\u0439\u0434\u0435\u043d\u043e (\u044f\u0437\u044b\u043a\: {0})
 
