--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -1,6 +1,6 @@
 LanguageTool Change Log
 
-2.2-dev (release planned for 2013-06-30)
+2.2 (2013-06-30)
 
  -Breton:
   -added/improved several rules
@@ -8,7 +8,7 @@ LanguageTool Change Log
   -updated POS dictionary from Apertium (svn r45122)
 
  -Catalan:
-  -improved rules
+  -added/improved many rules
   -fixed false alarms
   -rules have been categorized according to the upcoming Internationalization Tag Set (ITS)
    Version 2.0 standard from W3C.
@@ -21,7 +21,10 @@ LanguageTool Change Log
    The dictionary used is the one at
    http://www.opentaal.org/bestanden/doc_download/20-woordenlijst-v-210g-voor-openofficeorg-3
 
- -Esperanto
+ -English:
+  -added/improved a few rules
+
+ -Esperanto:
   -added/improved several rules
   -fixed some false alarms
   -updated <url> links to PMEG.
@@ -31,14 +34,23 @@ LanguageTool Change Log
   -fixed some false alarms
   -updated POS tag dictionary and Hunspell dictionary to Dicollecte-4.10
 
+ -German:
+  -added/improved several rules
+
  -Greek:
   -added a few rules (by Panagiotis Minos)
+
+ -Italian:
+  -small rule improvement
 
  -Khmer:
   -added some rules (by Nathan Wells)
 
+ -Polish:
+  -added a few new rules
+
  -Portuguese:
-  -added/improved several rules
+  -added/improved a few rules
   -it now has around 2000 compound words taken from a huge Porto Editora dictionary
 
  -Russian:
