--- a/languagetool-standalone/CHANGES.txt
+++ b/languagetool-standalone/CHANGES.txt
@@ -43,6 +43,9 @@ LanguageTool Change Log
  -Italian:
   -small rule improvement
 
+ -Japanese:
+  -avoid an ArrayOutOfBoundsException in the POS tagger
+
  -Khmer:
   -added some rules (by Nathan Wells)
 
@@ -77,12 +80,16 @@ LanguageTool Change Log
    http://localhost:8081/?language=en&enabled=STRANGE_RULE,ANOTHER_RULE&enabledOnly=yes&text=my+text
 
  -Fix bug "java.lang.StringIndexOutOfBoundsException" in DifferentLengthRule
-  (Ex.:http://localhost:8081/?language=ru&text=№&srctext=No.&motherTongue=en )
+  (Ex.: http://localhost:8081/?language=ru&text=№&srctext=No.&motherTongue=en )
+
+ -Worked around the "There is an incompatible JNA native library installed on this system" error
 
  -Updated Tika (used for language detection) from 0.9 to 1.3
 
  -The "--version" parameter of languagetool-commandline.jar now also prints
   the build date
+
+ -Several small bug fixes, code cleanups, and Javadoc improvements
 
 
 2.1 (2013-03-31)
